# realtime-v2t

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  yarn-update.sh
.github/workflows/: release.yml
backend/: .env.example  Dockerfile  README.md  docker-compose-ecs.yaml  docker-compose.yaml  main.py  package-lock.json  package.json  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 09f328f6fc17_init_tables.py
backend/app/config/: __init__.py
backend/app/logging/: __init__.py
backend/app/models/: __init__.py  results.py
backend/app/repositories/: __init__.py  base.py  results_repository.py
backend/app/services/: __init__.py  google_speech_service.py  s3_service.py
backend/app/ws/: __init__.py  serve.py
backend/app/ws/static/: index.html
backend/docker/app/: Dockerfile
backend/docker/database/: my.cnf
backend/scripts/: entrypoint.sh  wait_for_db.sh
frontend/: README.md  package.json  tsconfig.json  webpack.config.js  yarn-update.sh
frontend/src/: index.tsx
frontend/src/constants/: hosts.ts
frontend/src/containers/: App.css  App.tsx
frontend/src/utils/: Audio.tsx  Sockets.tsx
slide/: index.html  slideshow.md
