[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Takafumi Iju <ijufumi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "^0.14.0"
websockets = "^8.1"
asyncio = "^3.4.3"
boto3 = "^1.14.35"
alembic = "^1.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
