[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Takafumi Iju <ijufumi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
asyncio = "^3.4.3"
boto3 = "^1.14.35"
alembic = "^1.4.2"
mysqlclient = "^2.0.1"
python-dotenv = "^0.14.0"
python-socketio = "^4.6.0"
sanic = "^20.6.3"
sanic-cors = "^0.10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
