[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Takafumi Iju <ijufumi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
asyncio = "^3.4.3"
boto3 = "^1.14.35"
alembic = "^1.4.2"
mysqlclient = "^2.0.1"
python-dotenv = "^0.14.0"
python-socketio = "^4.6.0"
eventlet = "^0.36.1"
ffmpeg-python = "^0.2.0"
google-cloud-speech = "^1.3.2"
requests = "^2.31.0"
grpcio = "^1.56.0"
certifi = "^2024.8.30"
boto = "^2.49.0"
botocore = "^1.31.62"
urllib3 = "1.26.19"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
